--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,8 +11,19 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:14.5
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simple_bank
+        ports:
+          - 5432:5432
+
     steps:
-      - name: Set up Go
+      - name: Set Up Go
         uses: actions/setup-go@v3
         with:
           go-version: 1.18
@@ -20,6 +31,15 @@ jobs:
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
+
+      - name: Install Golang-migrate
+        run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v14.15.2/migrate.linux-amd64.tar.gz  | tar xvz
+          sudo mv migrate.linux-amd64 /usr/bin/migrate
+          which migrate
+
+      - name: Migration
+        run: make migrationup
 
       - name: Test
         run: make test
