--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: ci-test
+name: Run unit tests
 
 on:
   push:
@@ -14,13 +14,18 @@ jobs:
 
     services:
       postgres:
-        image: postgres:14.5
+        image: postgres:14.5-alpine
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: secret
           POSTGRES_DB: simple_bank
         ports:
           - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - name: Set Up Go
@@ -34,12 +39,12 @@ jobs:
 
       - name: Install Golang-migrate
         run: |
-          curl -L https://github.com/golang-migrate/migrate/releases/download/v14.15.2/migrate.linux-amd64.tar.gz  | tar xvz
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
           sudo mv migrate.linux-amd64 /usr/bin/migrate
           which migrate
 
-      - name: Migration
-        run: make migrationup
+      - name: Run migrations
+        run: make migrateup
 
       - name: Test
         run: make test
