--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,9 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
 
+      - name: Load secrets and save to app.env
+        run: gcloud secrets versions access 1 --secret="simplebank_secret" --out-file="app.env"
+
       - name: Build and publish image to GCR
         uses: carbonchain/action-container-registry@v1.1
         with:
