--- a/gke/service.yaml
+++ b/gke/service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: simple-bank-api-service
 spec:
   selector:
-    app: MyApp
+    app: simple-bank-api
   ports:
     - protocol: TCP
-      port: 8081
+      port: 80
       targetPort: 8081
+  type: LoadBalancer
