--- a/app.env
+++ b/app.env
@@ -3,5 +3,6 @@ DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8081
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=1h
+REFRESH_TOKEN_DURATION=24h
 #DB_DRIVER=mysql
 #DB_SOURCE=mysql://root:secret@tcp(localhost:3306)/simple_bank?multiStatements=true
